--- a/ig_active_reconstruction/CMakeLists.txt
+++ b/ig_active_reconstruction/CMakeLists.txt
@@ -46,3 +46,10 @@ target_link_libraries(${PROJECT_NAME}
 add_dependencies(${PROJECT_NAME} 
  ${catkin_EXPORTED_TARGETS}
 )
+
+## Mark cpp header files for installation
+ install(DIRECTORY include/${PROJECT_NAME}/
+   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+   FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+   PATTERN ".svn" EXCLUDE
+ )
